refatorações, novas funcionalidades e acertos gerais

--- a/CadastroTDR/login.html
+++ b/CadastroTDR/login.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1" /> 
-<!-- CSS-->
-   <link rel="stylesheet" type="text/css" media="screen" href="View/css/bootstrap.min.css" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="shortcut icon" href="View/img/favicon.png" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- CSS-->
+    <link rel="stylesheet" type="text/css" media="screen" href="View/css/bootstrap.min.css" />
 
     <script src="View/js/BuscaEndereco.js"></script>
     <script src="View/js/jquery-3.2.1.min.js"></script>
@@ -17,19 +19,19 @@
 </head>
 
 <body>
-<div class="container">
-    <h1> Trilhos Do Rio - Admin</h1>
-    <form method="post" action="View/Acesso.php">
+    <div class="container">
+        <h1> Trilhos Do Rio - Admin</h1>
+        <form method="post" action="View/Acesso.php">
 
-        <label> Usuário</label>
-        <input type="text" name="cpf" maxlength="50" />
+            <label> Usuário</label>
+            <input type="text" name="cpf" maxlength="50" />
 
-        <label>Senha</label>
-        <input type="password" name="senha" maxlength="50" />
-        <input type="submit" value="Entrar" />
+            <label>Senha</label>
+            <input type="password" name="senha" maxlength="50" />
+            <input type="submit" value="Entrar" />
 
 
-    </form>
+        </form>
     </div>
 </body>
 
